--- a/src/app/components/administracion/pagos/totales/totales.component.html
+++ b/src/app/components/administracion/pagos/totales/totales.component.html
@@ -1,5 +1,8 @@
 <div class="container my-2 ml-0 mr-0 p-0">
-    <button class="btn btn-primary mb-1" (click)="generarPDF()">Generar PDF</button>
+    <button class="btn btn-primary mb-1" (click)="generarPDF()">
+        <i class="fas fa-file-pdf"></i>
+        Generar reporte
+    </button>
     <div class="row justify-content-center">
         <div class="col-lg-12">
             <div class="card">
