--- a/src/app/components/recepcion/clientes/lista-titulares/lista-titulares.component.html
+++ b/src/app/components/recepcion/clientes/lista-titulares/lista-titulares.component.html
@@ -10,9 +10,10 @@
           <th>Salario</th>
           <th>Labora</th>
           <th>Telefono</th>
-          <th>Telefono Empresarial</th>
+          <!-- <th>Telefono Empresarial</th> -->
           <th>Correo Electronico</th>
           <th>Editar</th>
+          <th>Estado Cuenta</th>
           <th>Bajar</th>
         </tr>
       </thead>
@@ -23,7 +24,7 @@
           <td>{{ titular.salario }}</td>
           <td>{{ titular.nombreTrabajo }}</td>
           <td>{{ titular.telefonoPersonal }}</td>
-          <td>{{ titular.telefonoTrabajo }}</td>
+          <!-- <td>{{ titular.telefonoTrabajo }}</td> -->
           <td>{{ titular.correoPersonal }}</td>
           <td>
             <button type="button" name="edit" class="btn btn-primary btn-sm"
@@ -32,6 +33,13 @@
               Editar
             </button>
           </td>
+          <td>
+              <button type="button" name="edit" class="btn btn-primary btn-sm"
+                [routerLink]="['/estado-cuenta',titular.titular_id]" routerLinkActive="router-link-active">
+                <i class="fas fa-wallet"></i>
+                Estado
+              </button>
+            </td>
           <td>
             <button type="button" name="delete" (click)='delete(titular)' class="ml-1 btn btn-danger btn-sm">
               <i class="fas fa-trash-alt"></i>
