--- a/src/app/components/recepcion/clientes/lista-titulares/lista-titulares.component.html
+++ b/src/app/components/recepcion/clientes/lista-titulares/lista-titulares.component.html
@@ -8,7 +8,7 @@
           <th>Co. Matricula</th>
           <th>Nombre</th>
           <th>Salario</th>
-          <th>Labora</th>
+          <!-- <th>Labora</th> -->
           <th>Telefono</th>
           <!-- <th>Telefono Empresarial</th> -->
           <th>Correo Electronico</th>
@@ -22,7 +22,7 @@
           <td>{{ titular.titular_id }}</td>
           <td>{{ titular.nombre }}</td>
           <td>{{ titular.salario }}</td>
-          <td>{{ titular.nombreTrabajo }}</td>
+          <!-- <td>{{ titular.nombreTrabajo }}</td> -->
           <td>{{ titular.telefonoPersonal }}</td>
           <!-- <td>{{ titular.telefonoTrabajo }}</td> -->
           <td>{{ titular.correoPersonal }}</td>
@@ -30,7 +30,7 @@
             <button type="button" name="edit" class="btn btn-primary btn-sm"
               [routerLink]="['/titulares/form',titular.titular_id]" routerLinkActive="router-link-active">
               <i class="fas fa-user-edit"></i>
-              Editar
+              <!-- Editar -->
             </button>
           </td>
           <td>
@@ -43,7 +43,7 @@
           <td>
             <button type="button" name="delete" (click)='delete(titular)' class="ml-1 btn btn-danger btn-sm">
               <i class="fas fa-trash-alt"></i>
-              Baja
+              <!-- Baja -->
             </button>
           </td>
         </tr>
