2 horas antes de la defensa

--- a/src/app/components/administracion/pagos/cancelado/cancelado.component.html
+++ b/src/app/components/administracion/pagos/cancelado/cancelado.component.html
@@ -27,7 +27,7 @@
                 <td>{{ item.saldo_pendiente }}</td>
                 <td>
                   <button type="button" name="edit" class="btn btn-primary btn-sm"
-                    (click)="realizarPago(item.mensualidad_id)">Cancelar</button>
+                    (click)="cancelarPago(item.mensualidad_id)">Cancelar</button>
                 </td>
               </tr>
             </tbody>
