--- a/src/app/components/panel/panel.component.html
+++ b/src/app/components/panel/panel.component.html
@@ -112,11 +112,11 @@
         </li> -->
         <!--  -->
         <li class="nav-item">
-          <div class="container">
-            <div class="row justify-content-center" routerLinkActive="active">
+          <div class="container pl-0 pr-0">
+            <div class="row justify-content-start" routerLinkActive="active">
               <a style="font-size: 0.8rem;  color: white;" class="nav-link" href="#" routerLink="/ayuda">
                 <p class="text-light" style="font-size: .8rem">
-                  <i class="fas fa-tools"></i>
+                  <i class="fas fa-question-circle"></i>
                   Ayuda
                 </p>
               </a>
