--- a/src/app/components/administracion/reportes/reportes.component.html
+++ b/src/app/components/administracion/reportes/reportes.component.html
@@ -1,6 +1,8 @@
-<input type="text" placeholder="PDF src" [(ngModel)]="pdfSrc">
+<!-- <input type="text" placeholder="PDF src" [(ngModel)]="pdfSrc"> -->
+<div class="container bg-dark">
+        <pdf-viewer [src]="pdfSrc" 
+        [render-text]="true"
+        style="display: block;"
+        ></pdf-viewer>
+</div>
 
-<pdf-viewer [src]="pdfSrc" 
-              [render-text]="true"
-              style="display: block;"
-  ></pdf-viewer>
